grammar
Stmt_list       ->      Stmt Stmt_list | .
Stmt            ->      id assign Expr | print Expr.
Expr            ->      Atom Atom_tail.
Atom_tail       ->      xor Atom Atom_tail | .
Atom            ->      Term Term_tail.
Term_tail       ->      or Term Term_tail | .
Term            ->      Factor Factor_tail.
Factor_tail     ->      and Factor Factor_tail | .
Factor          ->      (Expr) | id | binary.
